--- a/styles/main.css
+++ b/styles/main.css
@@ -73,17 +73,30 @@ nav.navbar {
 .rating-container-div {
   margin: 7px 0 25px 14px; }
 
+#title {
+  margin-top: 50px; }
+
+.emphasize {
+  text-decoration: underline; }
+
 .wrapper {
   background: #50a3a2;
   background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
   position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
   height: 475px;
   margin-top: -200px;
-  overflow: hidden; }
+  overflow: hidden;
+  width: 100%;
+  min-height: 510px;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .wrapper.form-success .container h1 {
   -webkit-transform: translateY(85px);
@@ -94,7 +107,6 @@ nav.navbar {
   max-width: 600px;
   margin: 0 auto;
   padding: 80px 0;
-  height: 400px;
   text-align: center; }
 
 .container h1 {
